--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -15,6 +15,7 @@
 html, body {
     padding:0;
     margin:0;
+    background:#333333;
 }
 
 .container {
@@ -29,7 +30,7 @@ html, body {
 
 .logotype-link {
     font-family:'RobotoSlab';
-    color:#404040;
+    color:#f5f5f5;
     font-size:2em;
     text-decoration:none;
 }
@@ -42,8 +43,8 @@ html, body {
 .nav-item-link {
     padding:1em;
     border-radius:5em;
-    color:white;
-    background:#404040;
+    color:#333333;
+    background:#f5f5f5;
     text-decoration:none;
     font-family:'PTSans';
     margin:0.5em 0;
@@ -52,5 +53,4 @@ html, body {
 
 .nav-item-link:hover {
     background:gold;
-    color:#404040;
 }
