--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -44,7 +44,7 @@ html, body {
     padding:1em;
     border-radius:5em;
     color:#333333;
-    background:#f5f5f5;
+    background:#888888;
     text-decoration:none;
     font-family:'PTSans';
     margin:0.5em 0;
