--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -43,8 +43,8 @@ html, body {
 .nav-item-link {
     padding:1em;
     border-radius:5em;
-    color:#333333;
-    background:#888888;
+    color:#f5f5f5;
+    background:#606060;
     text-decoration:none;
     font-family:'PTSans';
     margin:0.5em 0;
