--- a/investitions-proj/assets/index.css
+++ b/investitions-proj/assets/index.css
@@ -508,3 +508,11 @@ td {
 	margin:6em auto;
 	width:1000px;
 }
+
+.cookies-using-container {
+	background:rgba(255,255,255,0.7);
+	color:rebeccapurple;
+	font-family:'PTSans';
+	text-align:center;
+	padding:1.2em;
+}
