--- a/view/wd.inf/auth.html
+++ b/view/wd.inf/auth.html
@@ -22,7 +22,7 @@
             </header>
 
             <div class="mobmenu-content">
-                <a href="start.html" class="mobmenu-link">Главная</a>
+                <a href="index.html" class="mobmenu-link">Главная</a>
                 <a href="tariffs.html" class="mobmenu-link">Тарифы вкладов</a>
                 <a href="cabinet.html" class="mobmenu-link">Личный кабинет</a>
                 <a href="auth.html" class="mobmenu-link">Авторизация</a>
