--- a/view/wd.inf/links.html
+++ b/view/wd.inf/links.html
@@ -35,7 +35,7 @@
         </style>
     </head>
     <body>
-        <a href="start.html" title="Главная страница (ссылка)">Главная</a>
+        <a href="index.html" title="Главная страница (ссылка)">Главная</a>
         <a href="tariffs.html" title="Страница с тарифами">Тарифы</a>
         <a href="contacts.html" title="Контакты и обратная связь">Контакты</a>
     </body>
